--- a/pub/main.css
+++ b/pub/main.css
@@ -14,6 +14,16 @@ div.clear   { clear: both; }
 
 div.sidebar li { margin: 0.5ex 0; }
 
+table {
+  border-collapse: collapse;
+}
+
+th, td {
+  border: 1px solid black;
+  padding: 1ex 1em;
+  vertical-align: top;
+}
+
 .site-footer {
   margin-top: 4ex;
   border-top: 1px solid #e8e8e8;
