Add ga4gh-retrieval.md to README and index
Remove ga4gh-retrieval's contents, history, and generic hts-specs footer.
Minor edits to capitalisation.  Use ASCII em dashes and quotation marks:
kramdown will convert these to Unicode dashes and smart quotes.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
       </div>
     </div>
 
-    {% include footer.html %}
+    {%unless page.suppress_footer %}{% include footer.html %}{% endunless %}
 
   </body>
 
